--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
     ]
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.3.0",
+    "@commitlint/config-conventional": "^17.3.0",
+    "@commitlint/cz-commitlint": "^17.3.0",
+    "@semantic-release/exec": "^6.0.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
@@ -39,7 +43,12 @@
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
+    "commitizen": "^4.2.5",
+    "husky": "^8.0.2",
+    "is-ci": "^3.0.1",
     "react-scripts": "^5.0.1",
+    "semantic-release": "^19.0.5",
+    "semantic-release-plugin-update-version-in-files": "^1.1.0",
     "typescript": "^4.8.4"
   }
 }
