--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -22,11 +22,13 @@ jobs:
       - name: Download artifact from Releases
         uses: dsaltares/fetch-gh-release-asset@1.1.0
         with:
-          file: bulletpress-.*\.tgz
+          file: performance-press-.*\.tgz
           regex: true
 
       - name: Unpack published package
-        run: tar -xzvf ./bulletpress-*.tgz
+        run: |
+          tar -xzvf ./performance-press-*.tgz
+          mv ./package/build ./package/webroot
 
       - name: Setup Pages
         uses: actions/configure-pages@v2
@@ -34,7 +36,7 @@ jobs:
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
         with:
-          source: ./package/public
+          source: ./package/webroot
           destination: ./_site
 
       - name: Upload artifact
